--- a/css/mysolutions.css
+++ b/css/mysolutions.css
@@ -59,3 +59,20 @@
     transition-duration: 2s;
     border-radius: 20px;
 }
+
+.ex-9-img:hover{
+    filter: grayscale(.6) sepia(.5);
+    transition-duration: 2s;
+    border-radius: 20px;
+    transform: scale(1.5);
+}
+
+.ex-10-icon{
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(1turn);
+    }
+}
