--- a/css/mysolutions.css
+++ b/css/mysolutions.css
@@ -76,3 +76,117 @@
         transform: rotate(1turn);
     }
 }
+
+.ex-11-icon:hover {
+    animation: rotate75 2s linear;
+}
+
+@keyframes rotate75{
+
+    0%{
+        transform: rotate(0);
+    }
+
+    90%{
+        transform: rotate(274deg);
+    }
+
+    100%{
+        transform: rotate(0);
+    }
+}
+
+.ex-12-button:hover 
+.ex-12-top-white{
+    animation: RotateTop 2s linear;
+}
+
+@keyframes RotateTop{
+    0%{
+        left: 10%;
+    }
+    50%{
+        left: calc(100% - 60px);
+    }
+    100%{
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white{
+    animation: RotateBot 2s linear;
+}
+
+@keyframes RotateBot{
+    0%{
+        right: 10%;
+    }
+    50%{
+        right: calc(100% - 60px);
+    }
+    100%{
+        right: 10%;
+    }
+}
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: RotateTopComplete 2s linear;
+}
+
+@keyframes RotateTopComplete{
+    0%{
+        left: 10%;
+        top: -10px;
+    }
+    30%{
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45%{
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75%{
+        left: 0;
+        top: 100%;
+    }
+    90%{
+        left: -15px;
+        top: -10px;
+    }
+    100%{
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: RotateBotComplete 2s linear;
+}
+
+@keyframes RotateBotComplete{
+    0%{
+        bottom: -10px;
+        right: 10%;
+    }
+    30%{
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45%{
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75%{
+        right: 0;
+        bottom: 100%;
+    }
+    90%{
+        right: -15px;
+        bottom: -10px;
+    }
+    100%{
+        bottom: -10px;
+        right: 10%;
+    }
+}
